# sparse-search

./: .gitignore  README.md  pyproject.toml
src/sparse_search/: __init__.py  bm25.py  utils.py
tests/: test_bm25.py  test_utils.py
