[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sparse-search"
authors = [
    { name = "Gareth Jones", email = "gareth@pinecone.io" },
]
description = "A libary for sparse search using vectors"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
requires-python = ">=3.7"
dynamic = ["version"]

dependencies = [
    "scikit-learn",
]

[project.optional-dependencies]
test = [
    "black",
    "pytest",
]

[project.urls]
Documentation = "https://github.com/pinecone-io/sparse-search/tree/main#readme"
Source = "https://github.com/pinecone-io/sparse-search/"
Tracker = "https://github.com/pinecone-io/sparse-search/issues"

[tool.flit.module]
name = "sparse_search"

[tool.bandit]
exclude_dirs = ["build", "dist", "tests", "scripts"]
number = 4
recursive = true
targets = "src"

[tool.black]
line-length = 120
fast = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
venv = "env37"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.7"
pythonPlatform = "Linux"

executionEnvironments = [
    { root = "src" }
]